--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -22,6 +22,7 @@ psycopg2-binary>=2.9.9
 # --- Utils ---
 pydantic>=2.0.0
 pydantic-settings>=2.0.0
+pydantic-ai>=1.39.0
 transliterate>=1.10.2
 adaptive-cards-py>=0.0.8
 rapidfuzz>=3.0.0  # Fast fuzzy string matching for user search
@@ -34,3 +35,9 @@ microsoft-teams-apps>=2.0.0a8
 # Note: Only alpha versions available
 microsoft-teams-ai>=2.0.0a8
 microsoft-teams-openai>=2.0.0a8
+
+# --- AI Services ---
+openai>=2.14.0
+
+# --- Date and Time Handling ---
+pytz>=2025.2
