Refactor bot enums and actions structure
- Removed old enum definitions for actions, intents, and modules.
- Introduced new modular structure for actions and intents, categorized by functionality.
- Updated registry logic to utilize new action and intent mappings.
- Implemented a unified approach for handling actions and intents through dedicated classes.
- Enhanced ActionPayload model for stricter validation and clarity.
- Added orchestrator for improved message handling and routing.
- Updated requirements to include necessary dependencies.

--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -3,6 +3,7 @@ botbuilder-core>=4.17.0
 botbuilder-schema>=4.15.0
 botbuilder-integration-aiohttp>=4.15.0
 botframework-connector>=4.15.0
+botbuilder-azure
 
 # --- Azure & Auth ---
 azure-identity>=1.14.0
@@ -35,7 +36,6 @@ microsoft-teams-apps>=2.0.0a8
 # Note: Only alpha versions available
 microsoft-teams-ai>=2.0.0a8
 microsoft-teams-openai>=2.0.0a8
-
 # --- AI Services ---
 openai>=2.14.0
 
