--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -25,6 +25,7 @@ pydantic>=2.0.0
 pydantic-settings>=2.0.0
 pydantic-ai>=1.39.0
 transliterate>=1.10.2
+anyascii>=0.3.3
 adaptive-cards-py>=0.0.8
 rapidfuzz>=3.0.0  # Fast fuzzy string matching for user search
 
