--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
       - BOT_PASSWORD=${BOT_PASSWORD}
       - APP_TYPE=${APP_TYPE:-UserAssignedMsi}
       - TEAMS_APP_TENANT_ID=${TEAMS_APP_TENANT_ID}
+      - GRAPH_DOMAIN=${GRAPH_DOMAIN}
       # OpenAI
       - OPENAI_API_KEY=${OPENAI_API_KEY}
       - OPENAI_MODEL_NAME=${OPENAI_MODEL_NAME:-gpt-3.5-turbo}
