Refactor and clean up codebase
- Removed unused `email_service.py` and `bot_action.py` files.
- Deleted obsolete `readme.md` in botRegistration.
- Updated `base_controller.py` to remove quotes around ServiceContainer type hint.
- Cleaned up `service_container.py` by removing the EmailService reference.
- Fixed action names in `time_off.py` for consistency.
- Simplified date parsing logic in `date_parser.py` and removed extensive comments.
- Updated logging to use module name in `retry.py` and `helpers.py`.
- Added a cleanup comment in `main.py` for future implementation.
- Updated `requirements.txt` to include `msgraph-sdk`.
- Refactored `graph_service.py` to utilize the new msgraph SDK and improved user creation logic.
- Introduced new Pydantic models for user schemas in `users.py`.
- Enhanced error handling and logging throughout the GraphService methods.

--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,4 +1,4 @@
-# --- Core Framework (Оновлено до 4.15+) ---
+# --- Core Framework
 botbuilder-core>=4.17.0
 botbuilder-schema>=4.15.0
 botbuilder-integration-aiohttp>=4.15.0
@@ -8,6 +8,8 @@ botbuilder-azure
 # --- Azure & Auth ---
 azure-identity>=1.14.0
 azure-communication-email>=1.0.0
+msgraph-sdk
+
 
 # --- Web Server ---
 fastapi>=0.100.0
